Reduce sidebar menu text size from 16pt to 12pt to prevent text truncation

--- a/src/qt/res/css/dark.css
+++ b/src/qt/res/css/dark.css
@@ -730,6 +730,7 @@ QToolBar > QToolButton {
     background-size: 10px;
     background-position: left;
     font-weight: 500;
+    font-size: 12pt;
 }
 
 QToolBar > QToolButton:hover:!checked {
