--- a/src/qt/res/css/light.css
+++ b/src/qt/res/css/light.css
@@ -716,6 +716,7 @@ QToolBar > QToolButton {
     background-size: 10px;
     background-position: left;
     font-weight: 500;
+    font-size: 12pt;
 }
 
 QToolBar > QToolButton:hover:!checked {
